; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_ui.c_CL_ShutdownUI.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_ui.c_CL_ShutdownUI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@KEYCATCH_UI = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@cls = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@uivm = common dso_local global i32* null, align 8
@UI_SHUTDOWN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CL_ShutdownUI() #0 {
  %1 = call i32 (...) @Key_GetCatcher()
  %2 = load i32, i32* @KEYCATCH_UI, align 4
  %3 = xor i32 %2, -1
  %4 = and i32 %1, %3
  %5 = call i32 @Key_SetCatcher(i32 %4)
  %6 = load i32, i32* @qfalse, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cls, i32 0, i32 0), align 4
  %7 = load i32*, i32** @uivm, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %0
  br label %16

10:                                               ; preds = %0
  %11 = load i32*, i32** @uivm, align 8
  %12 = load i32, i32* @UI_SHUTDOWN, align 4
  %13 = call i32 @VM_Call(i32* %11, i32 %12)
  %14 = load i32*, i32** @uivm, align 8
  %15 = call i32 @VM_Free(i32* %14)
  store i32* null, i32** @uivm, align 8
  br label %16

16:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @Key_SetCatcher(i32) #1

declare dso_local i32 @Key_GetCatcher(...) #1

declare dso_local i32 @VM_Call(i32*, i32) #1

declare dso_local i32 @VM_Free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
